# claude-select

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: python-sdk.md  python-sdk.zh-CN.md
src/claude_select/: __init__.py  __main__.py  cli.py  exceptions.py  live_state.py  locking.py  manager.py  models.py  oauth.py  paths.py  store.py  usage.py
src/claude_switch/: __init__.py  __main__.py  cli.py  live_state.py  locking.py  manager.py  oauth.py  paths.py  store.py
tests/: conftest.py  test_cli.py  test_cli_more.py  test_live_state.py  test_locking.py  test_main.py  test_manager.py  test_models.py  test_oauth.py  test_oauth_more.py  test_paths.py  test_store.py  test_usage.py
