[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-select"
version = "0.3.0"
description = "Manage a local registry of Claude login snapshots for CLI selection and Python SDK usage."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "wx.luo" }
]
keywords = ["claude", "claude-code", "oauth", "sdk", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "rich>=13.9.0",
]

[project.urls]
Homepage = "https://github.com/Nomia/claude-select"
Repository = "https://github.com/Nomia/claude-select"
Issues = "https://github.com/Nomia/claude-select/issues"
Changelog = "https://github.com/Nomia/claude-select/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.0",
  "twine>=5.1.1",
]

[project.scripts]
claude-select = "claude_select.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=claude_select --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_generics = true
show_error_codes = true

[tool.coverage.report]
fail_under = 90
skip_empty = true
